# Корректное отображение формы "Платежная информация"

appId: by.batteryfly.ev_charging.dev
tags:
  - regression
---

- runFlow:
    file: ../../subflows/auth/login.yaml

- tapOn: "lera\nWelcome"

- assertVisible: "Payment information"

- tapOn: "Payment information"

- assertVisible: "Payment information"
- assertVisible: "Transaction history"
- assertVisible: "Balance"







