# Функциональность кнопки "Профиль"

appId: by.batteryfly.ev_charging.dev
tags:
  - regression
---

- runFlow:
    file: ../../subflows/auth/login.yaml

- tapOn: "lera\nWelcome"

- assertVisible: "Profile"
- assertVisible: "lera"








