appId: by.batteryfly.ev_charging.dev
tags:
  - regression
---
- runFlow:
    file: ../../subflows/auth/login.yaml

- extendedWaitUntil:
    visible: ".*List.*"
    timeout: 30000
- tapOn:
    text: ".*List.*"
- waitForAnimationToEnd:
    timeout: 5000


- assertVisible: ".*\n# .*\n.*\n.*\n.*kW"

- assertVisible:
    text: ".*\n# .*\n.*\n.*km\n.*kW"
    index: 0

- scrollUntilVisible:
    element: ".*Unavailable.*"
    direction: DOWN
    timeout: 10000
- assertVisible:
    text: ".*\n# .*\n.*\nUnavailable\n.*kW"

- assertNotVisible:
    text: ".*\n# .*\n.*\n.*km\n.*kW"
    below:
      text: ".*Unavailable.*"
